<resources>
    <string name="wifi_title">Wi-Fi</string>
    <string name="wifi_summary">Вкл. или выкл. сеть Wi-Fi</string>
    <string name="hints_title">Подсказки</string>
    <string name="hints_summary">Показывать подсказки</string>
    <string name="settings_title">Настройки</string>
    <string name="ringtones_title">Настройки рингтонов</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="open_ringtones">Открыть настройки рингтонов</string>
    <string name="glad_summary_off">Вы уверены, что не будете гладить кота?</string>
    <string name="glad_summary_on">Гладить кота</string>
    <string name="glad_switch_off">Нет</string>
    <string name="glad_switch_on">Да</string>
    <string name="ringtone_summary">Устанавливает мелодию для звонка (вкл. или выкл.)</string>
    <string name="ringtone_title">Настройки рингтонов</string>
    <string name="category_files_title">Работа с файлами</string>
    <string name="files_title">Открыть файл</string>
    <string name="files_summary">Открывать файл при запуске приложения</string>
    <string name="category_font_title">Настройки шрифта</string>
    <string name="font_size">Размер шрифта</string>
    <string name="font_size_summary">Устанавливает новый размер шрифта</string>
    <string name="font_size_dialog_title">Введите размер шрифта (от 10 до 32)</string>
    <string name="font_style">Стиль для шрифта</string>
    <string name="font_style_summary">Устанавливает стиль для шрифта</string>
    <string name="font_style_dialog_title">Выберите стиль для шрифта</string>
    <string name="text_color_title">Цвет текста</string>
    <string name="text_color_summary">Устанавливает цвет для текста</string>
    <string name="color_black">Черный</string>
    <string name="color_black_summary">Устанавливает черный цвет</string>
    <string name="color_red">Красный</string>
    <string name="color_red_summary">Устанавливает красный цвет</string>
    <string name="color_green">Зеленый</string>
    <string name="color_green_summary">Устанавливает зеленый цвет</string>
    <string name="color_blue">Синий</string>
    <string name="color_blue_summary">Устанавливает синий цвет</string>
    <string name="system_settings_title">Настройка через намерение</string>
    <string name="system_settings_summary">Импортированная системная настройка</string>
    <string name="cat_title">У вас есть кот?</string>
    <string name="cat_summary">Доступно для владельцев котов</string>
    <string name="cat_food_title">Подарки для кота</string>
    <string name="cat_food_summary">Угости кота</string>
    <string name="cat_height_title">Рост кота</string>
    <string name="cat_height_summary">Высота кота в см</string>
    <string name="cat_height_dialog_message">Выберите нужное значение:</string>
    <string name="picker_title">Печёнка для кота (гр)</string>
    <string name="picker_dialog_message">Выберите суточный паёк для кота в граммах:</string>
    <string name="volume_title">Настройка громкости звука</string>
    <string name="volume_summary">Установите нужную громкость мяуканья кота</string>
    <string name="settings_cathouse">Кошкин дом</string>
    <string name="settings_cathouse_summary">Этажность, техника</string>
    <string name="settings_display">Презентация</string>
    <string name="settings_displaySummary">Гости, подарки</string>
    <string name="settings_notify">Уведомления</string>
    <string name="settings_vacuum_summary">Разрешение на использование пылесоса</string>
    <string name="settings_vacuum">Пылесос</string>
    <string name="settings_floor_summary">Разрешить использовать несколько этажей</string>
    <string name="settings_floor">Этажность</string>
    <string name="settings_floor_dialog_title">Выберите количество этажей</string>
    <string name="settings_floors">Количество этажей</string>
    <string name="app_name">Настройки типа</string>
</resources>