<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wifi"
        android:summary="@string/wifi_summary"
        android:title="@string/wifi_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hints"
        android:summary="@string/hints_summary"
        android:title="@string/hints_title" />

    <com.example.preferences.CustomPreferenceCategory
        android:title="@string/category_files_title">
        <CheckBoxPreference
            android:key="pref_openmode"
            android:title="@string/files_title"
            android:summary="@string/files_summary" />
    </com.example.preferences.CustomPreferenceCategory>

    <com.example.preferences.CustomPreferenceCategory
        android:title="@string/category_font_title">
        <EditTextPreference
            android:key="text_size"
            android:title="@string/font_size"
            android:summary="@string/font_size_summary"
            android:defaultValue="14"
            android:dialogTitle="@string/font_size_dialog_title" />
        <ListPreference
            android:key="pref_style"
            android:title="@string/font_style"
            android:summary="@string/font_style_summary"
            android:defaultValue="1"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:dialogTitle="@string/font_style_dialog_title" />
    </com.example.preferences.CustomPreferenceCategory>

    <SwitchPreference
        android:key="glad"
        android:summaryOff="@string/glad_summary_off"
        android:summaryOn="@string/glad_summary_on"
        android:switchTextOff="@string/glad_switch_off"
        android:switchTextOn="@string/glad_switch_on" />

    <PreferenceScreen
        android:key="text_color"
        android:title="@string/text_color_title"
        android:summary="@string/text_color_summary">

        <CheckBoxPreference
            android:key="text_color_black"
            android:title="@string/color_black"
            android:defaultValue="true"
            android:summary="@string/color_black_summary" />
        <CheckBoxPreference
            android:key="text_color_red"
            android:title="@string/color_red"
            android:summary="@string/color_red_summary" />
        <CheckBoxPreference
            android:key="text_color_green"
            android:title="@string/color_green"
            android:summary="@string/color_green_summary" />
        <CheckBoxPreference
            android:key="text_color_blue"
            android:title="@string/color_blue"
            android:summary="@string/color_blue_summary" />
    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/system_settings_title"
        android:summary="@string/system_settings_summary">
        <intent android:action="android.settings.AIRPLANE_MODE_SETTINGS" />
    </PreferenceScreen>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="cat_key"
        android:summary="@string/cat_summary"
        android:title="@string/cat_title" />
    <EditTextPreference
        android:dependency="cat_key"
        android:key="cat_food"
        android:summary="@string/cat_food_summary"
        android:title="@string/cat_food_title" />

    <com.example.preferences.SeekBarDialogPreference
        android:defaultValue="20"
        android:dialogMessage="@string/cat_height_dialog_message"
        android:key="height"
        android:max="50"
        android:summary="@string/cat_height_summary"
        android:title="@string/cat_height_title"
        custom:min="1"
        custom:progressTextSuffix=" см" />

    <com.example.preferences.NumberPickerDialogPreference
        android:defaultValue="200"
        android:dialogMessage="@string/picker_dialog_message"
        android:max="250"
        android:title="@string/picker_title"
        custom:min="100" />

    <VolumePreference
        android:name="Volume Preference"
        android:key="ringVolPref"
        android:title="@string/volume_title"
        android:summary="@string/volume_summary" />

    <PreferenceCategory android:title="Запуск сайта через Intent">
        <PreferenceScreen
            android:summary="developer.alexanderklimov.ru/android"
            android:title="Освой Android играючи">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://developer.alexanderklimov.ru/android/" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>